podofosign: fix compile errors with openssl-1.1.0f
https://sourceforge.net/p/podofo/mailman/message/36077904/

This fixes the following compile errors with openssl-1.1.0f:

tools/podofosign/podofosign.cpp:877:32: error: ‘OpenSSL_add_all_algorithms’ was not declared in this scope
     OpenSSL_add_all_algorithms();
                                ^
tools/podofosign/podofosign.cpp:878:29: error: ‘ERR_load_crypto_strings’ was not declared in this scope
     ERR_load_crypto_strings();
                             ^
tools/podofosign/podofosign.cpp:1085:22: error: ‘ERR_free_strings’ was not declared in this scope
     ERR_free_strings();
                      ^

This patch has been tested on Linux with openssl-1.0.2l and
openssl-1.1.0f.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -325,6 +325,14 @@ ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 FIND_PACKAGE(ZLIB REQUIRED)
 MESSAGE("Found zlib headers in ${ZLIB_INCLUDE_DIR}, library at ${ZLIB_LIBRARIES}")
 
+FIND_PACKAGE(OpenSSL)
+if(OpenSSL_FOUND)
+  SET(PODOFO_HAVE_OPENSSL TRUE)
+  INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIRS})
+  LINK_DIRECTORIES(${OPENSSL_LIBRARIES})
+  MESSAGE(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
+  MESSAGE("Found OpenSSL ${OPENSSL_VERSION} headers in ${OPENSSL_INCLUDE_DIRS}, library at ${OPENSSL_LIBRARIES}")
+ELSE(OpenSSL_FOUND)
 FIND_PACKAGE(LIBCRYPTO)
 
 IF(LIBCRYPTO_FOUND)
@@ -334,6 +342,7 @@ IF(LIBCRYPTO_FOUND)
 ELSE(LIBCRYPTO_FOUND)
 	MESSAGE("OpenSSL's libCrypto not found. Encryption support will be disabled")
 ENDIF(LIBCRYPTO_FOUND)
+ENDIF(OpenSSL_FOUND)
 
 FIND_PACKAGE(LIBIDN)
 
@@ -392,8 +401,6 @@ ELSE(CppUnit_FOUND)
 ENDIF(CppUnit_FOUND)
 
 ENDIF(NOT PODOFO_BUILD_LIB_ONLY)
-
-FIND_PACKAGE(OpenSSL)
 
 FIND_PACKAGE(FREETYPE REQUIRED)
 MESSAGE("Found freetype library at ${FREETYPE_LIBRARIES}, headers ${FREETYPE_INCLUDE_DIR}")
@@ -499,6 +506,7 @@ SET(PODOFO_LIB_DEPENDS
   ${LIBCRYPTO_LDFLAGS}
   ${LIBCRYPTO_LIBRARIES}
   ${LIBJPEG_LIBRARIES}
+  ${OPENSSL_LIBRARIES}
   ${PLATFORM_SYSTEM_LIBRARIES}
   ${stlport_libraries_if_use_stlport}
   ${FREETYPE_LIBRARIES}
